[gd_scene load_steps=25 format=3 uid="uid://ce5ja3ttxl35n"]

[ext_resource type="Script" path="res://enemigoPantalon.gd" id="1_qmrib"]
[ext_resource type="PackedScene" uid="uid://cpkvh76ubusn" path="res://scenes/charco.tscn" id="2_fxk4l"]
[ext_resource type="Texture2D" uid="uid://digdbxt6r5ps4" path="res://resources/pantalon_.png" id="2_weumw"]
[ext_resource type="PackedScene" uid="uid://dgsc2gh621mcf" path="res://scenes/espumando.tscn" id="3_q0vbw"]
[ext_resource type="PackedScene" uid="uid://ccuc514f4qega" path="res://scenes/enemigo_vida.tscn" id="4_tjdlw"]
[ext_resource type="PackedScene" uid="uid://2pxxmkgra5dc" path="res://scenes/goteando.tscn" id="5_v2l5p"]
[ext_resource type="Texture2D" uid="uid://btgxmy4250aqo" path="res://resources/aupantalon2.png" id="6_lfhs8"]
[ext_resource type="Texture2D" uid="uid://wgbmtqn7b7tq" path="res://resources/pantalon_sacudida.png" id="7_xc1s4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xecvu"]
radius = 34.5579

[sub_resource type="CircleShape2D" id="CircleShape2D_6djig"]
radius = 42.19

[sub_resource type="Animation" id="Animation_pn6j5"]
resource_name = "Idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_weumw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 3]
}

[sub_resource type="Animation" id="Animation_32du3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_weumw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_wjx1a"]
resource_name = "danho"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_lfhs8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_pqatu"]
resource_name = "sacudida"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_xc1s4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iosqj"]
_data = {
"Idle": SubResource("Animation_pn6j5"),
"RESET": SubResource("Animation_32du3"),
"danho": SubResource("Animation_wjx1a"),
"sacudida": SubResource("Animation_pqatu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1rv35"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bo5sn"]
animation = &"danho"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7xlno"]
animation = &"sacudida"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dq02l"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y6y75"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_doppp"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_87t6w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sdfju"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fdiub"]
states/Idle/node = SubResource("AnimationNodeAnimation_1rv35")
states/Idle/position = Vector2(424, 149.556)
states/Start/position = Vector2(202.667, 84.4444)
states/danho/node = SubResource("AnimationNodeAnimation_bo5sn")
states/danho/position = Vector2(682.667, 150)
states/sacudida/node = SubResource("AnimationNodeAnimation_7xlno")
states/sacudida/position = Vector2(412, 32.6667)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_dq02l"), "Idle", "danho", SubResource("AnimationNodeStateMachineTransition_y6y75"), "danho", "Idle", SubResource("AnimationNodeStateMachineTransition_doppp"), "Idle", "sacudida", SubResource("AnimationNodeStateMachineTransition_87t6w"), "sacudida", "Idle", SubResource("AnimationNodeStateMachineTransition_sdfju")]

[node name="Pantalon" type="CharacterBody2D"]
script = ExtResource("1_qmrib")
charco_scene = ExtResource("2_fxk4l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -4)
scale = Vector2(2, 2)
texture = ExtResource("2_weumw")
hframes = 4
frame = 1

[node name="espumando" parent="." instance=ExtResource("3_q0vbw")]
z_index = 1
emitting = false
amount = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -6)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_xecvu")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, -6)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_6djig")

[node name="EnemigoVida" parent="." instance=ExtResource("4_tjdlw")]
offset_left = -39.0
offset_top = -71.0
offset_right = 111.0
offset_bottom = -27.0

[node name="MovimientoRandom" type="Timer" parent="."]
autostart = true

[node name="goteando" parent="." instance=ExtResource("5_v2l5p")]
position = Vector2(0, -67)
amount = 10

[node name="CharcoSpawn" type="Marker2D" parent="."]
position = Vector2(0, 56)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iosqj")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iosqj")
}
tree_root = SubResource("AnimationNodeStateMachine_fdiub")
advance_expression_base_node = NodePath("../AnimationPlayer")
anim_player = NodePath("../AnimationPlayer")
